
design:
- SCIP_HASHMAP now works also without block memory
- the old probing presolver presol_probing.{c.h} is now a propagator prop_probing.{c,h}, all corresponding  parameters moved as well
- the old redcost separator sepa_redcost.{c.h} is now a propagator prop_redcost.{c,h}, all corresponding  parameters moved as well
- moved all timings to type_timing.h
- outsourced propAndSolve() method in solve.c which calls domain propagation and solving of the lp and relaxation
- CIP format variable characters defined, e.g. SCIP_VARTYPE_INTEGER_CHAR

Makefile
- via "PARASCIP=true" as a "Makefile" option it is possible to compile SCIP threadsafe in DEBUG-mode, (in OPT-mode it's not necessary)
- new variable $(INSTALLDIR) in Makefile which define installation directory for the libraries, $(INSTALLDIR)/lib/, 
  binary, $(INSTALLDIR)/bin, and include headers, $(INSTALLDIR)/include, the default value is the empty string
- new target in Makefile "install" performs "make" and copies the include headers, binary, and libraries
- new target in Makefile "uninstall" removes libraries, binary, and include headers form INSTALLDIR
- the 'make' parameter 'PARASCIP=true' leads to threadsafe message handlers where you need to call SCIPcreateMesshdlrPThreads and SCIPmessageSetHandler/SCIPmessageSetDefaultHandler and SCIPfreeMesshdlrPThreads; therefor we need to link with pthread library
- to link against IPOPT, only the base directory of an Ipopt installation need to be specified now;
  additionally, if building with gnu compilers, the Ipopt libraries directory is stored in the SCIP binary, which should make it easier to run with Ipopt shared libraries
- new target "make libs" which compiles only the libraries
- to link against Clp, only the base directory of an Clp installation needs to be specified now
- moved *.test and *.solu files to folder testset in check folder and adjusted test scripts

SCIP version 2.0.2
==================

fixed bugs: