@@ -183,14 +183,16 @@ END {
        }
        else if( abs(db) < 1e-06 )
          gap = -1.0;
+      else if( abs(pb) < 1e-06 )
+         gap = -1.0;
        else if( pb*db < 0.0 )
          gap = -1.0;
        else if( abs(db) >= +infty )
          gap = -1.0;
        else if( abs(pb) >= +infty )
          gap = -1.0;
-       else
-         gap = 100.0*abs((pb-db)/db);
+      else
+         gap = 100.0*abs((pb-db)/min(abs(db),abs(pb)));
        if( gap < 0.0 )
          gapstr = "  --  ";
        else if( gap < 1e+04 )
